--- a/_config.yml
+++ b/_config.yml
@@ -381,7 +381,7 @@ han: true
 # Disqus
 disqus:
   enable: ture
-  shortname: HAXAN
+  shortname: https-lhxhaxan-github-io
   count: true
   # hide comments (visitors need to click to load the comments)
   # count need to be false when hide is true
