--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 
 # Site
 title: Haxan's
-subtitle:
-description:
+subtitle: Hack Anything X Anytime Nodoubt
+description: Hack Anything X Anytime Nodoubt
 author: Haxan Li
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: en
