--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,7 @@ menu:
   about: /about/
   archives: /archives/
   tags: /tags/
-  sitemap: /sitemap.xml
+  #sitemap: /sitemap.xml
   #commonweal: /404.html
 
 
@@ -140,7 +140,7 @@ menu_icons:
   schedule: calendar
   tags: tags
   archives: archive
-  #sitemap: sitemap
+  sitemap: sitemap
   commonweal: heartbeat
 
 
