baidu_analytics: 8sXfyYIzv2

--- a/_config.yml
+++ b/_config.yml
@@ -373,7 +373,7 @@ han: true
 #swiftype_key:
 
 # Baidu Analytics ID
-#baidu_analytics:
+baidu_analytics: 8sXfyYIzv2
 
 # Duoshuo ShortName
 #duoshuo_shortname:
