--- a/_config.yml
+++ b/_config.yml
@@ -374,7 +374,7 @@ han: true
 
 # Baidu Analytics ID
 baidu_analytics: 8sXfyYIzv2
-
+baidu_site_verification: 8sXfyYIzv2
 # Duoshuo ShortName
 #duoshuo_shortname:
 
